examples/test/testpolicy16477.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16477
  namespace: namespace391
spec:
  podSelector:
    matchLabels:
      key42: value8
      key30: value29
      key22: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value17
      podSelector:
        matchLabels:
          key30: value4
